[package]
name = "cartraxapi"
version = "0.1.0"
edition = "2021"
authors = ["Cameron S. Williamson"]
description = "An API for tracking gas fill ups for a car"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
chrono = "0.4.26"
clap = { version = "4.3.11", features = ["derive"] }
env_logger = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "json", "macros", "chrono"] }
